--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tic-tac-toe",
-  "version": "0.1.0",
-  "description": "Tic-Tac-Toe game",
+  "version": "0.2.0",
+  "description": "Tic-Tac-Toe game implemented using various approaches.",
   "repository": {
     "type": "git",
     "url": "git://github.com/benvds/tic-tac-toe.git"
